<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.quyo.billscalculatorapp.Display">

    <ImageView
        android:id="@+id/background"
        android:layout_width="602dp"
        android:layout_height="594dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/pigGlassesImg"
        android:layout_width="85dp"
        android:layout_height="83dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/incomeAfterBG"
        app:srcCompat="@drawable/glasses" />

    <ImageView
        android:id="@+id/billsBackground"
        android:layout_width="97dp"
        android:layout_height="352dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sumbillTitle"
        app:srcCompat="@android:color/darker_gray" />

    <ImageView
        android:id="@+id/title1BG"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/darker_gray" />

    <ImageView
        android:id="@+id/title2BG"
        android:layout_width="70dp"
        android:layout_height="43dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/title1BG"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/darker_gray" />

    <ImageView
        android:id="@+id/title3BG"
        android:layout_width="88dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/title2BG"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/darker_gray" />

    <EditText
        android:id="@+id/displayBox"
        android:layout_width="261dp"
        android:layout_height="360dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toEndOf="@+id/internetTxt"
        app:layout_constraintTop_toBottomOf="@+id/myAmtTitle" />

    <TextView
        android:id="@+id/sumbillTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:text="Bills"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myAmtTitle"
        android:layout_width="72dp"
        android:layout_height="52dp"
        android:layout_marginStart="92dp"
        android:text="Your Amount"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/sumbillTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rmAmtTitle"
        android:layout_width="83dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="Roomates Amount"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/myAmtTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rentTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/rentTxt"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sumbillTitle" />

    <TextView
        android:id="@+id/rentAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rentTxt" />

    <TextView
        android:id="@+id/electricTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/electricityTxt"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rentAmt" />

    <TextView
        android:id="@+id/electricAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/electricTxt" />

    <TextView
        android:id="@+id/waterTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/waterTxt"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/electricAmt" />

    <TextView
        android:id="@+id/waterAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waterTxt" />

    <TextView
        android:id="@+id/internetTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/internetTxt"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waterAmt" />

    <TextView
        android:id="@+id/internetAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internetTxt" />

    <TextView
        android:id="@+id/insuranceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/insuranceTxt"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internetAmt" />

    <TextView
        android:id="@+id/insuranceAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insuranceTxt" />

    <TextView
        android:id="@+id/otherTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/otherTxt"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insuranceAmt" />

    <TextView
        android:id="@+id/otherAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherTxt" />

    <ImageView
        android:id="@+id/incomeBG"
        android:layout_width="88dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billsBackground"
        app:srcCompat="@android:color/darker_gray" />

    <ImageView
        android:id="@+id/incomeAfterBG"
        android:layout_width="96dp"
        android:layout_height="51dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/incomeAfterTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/incomeBG"
        app:srcCompat="@android:color/darker_gray" />

    <TextView
        android:id="@+id/incomeTxt"
        android:layout_width="66dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/incomeBefore"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherAmt" />

    <TextView
        android:id="@+id/incomeAfterTxt"
        android:layout_width="89dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/afterBills"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/incomeTxt"
        app:layout_constraintTop_toTopOf="@+id/pigGlassesImg" />

    <TextView
        android:id="@+id/incomeAmtBefore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeTxt" />

    <TextView
        android:id="@+id/incomeAmtAfter"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/pigGlassesImg"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toEndOf="@+id/incomeAmtBefore"
        app:layout_constraintTop_toBottomOf="@+id/incomeAfterTxt" />

    <Button
        android:id="@+id/startOverBtn"
        android:layout_width="64dp"
        android:layout_height="63dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/startOver"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pigGlassesImg" />

    <ImageView
        android:id="@+id/btnBG"
        android:layout_width="67dp"
        android:layout_height="68dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pigGlassesImg"
        app:srcCompat="@android:color/darker_gray" />

</android.support.constraint.ConstraintLayout>
